tests/purs/failing/4408Cyclic.out
Error found:
in module [33mMain[0m
at tests/purs/failing/4408Cyclic.purs:23:29 - 23:34 (line 23, column 29 - line 23, column 34)

  Hole '[33mhelp[0m' has the inferred type
  [33m          [0m
  [33m  Int -> K[0m
  [33m          [0m
  You could substitute the hole with one of these values:
  [33m                                                                    [0m
  [33m  Main.aSaki                  :: Int -> K                           [0m
  [33m  Main.bNoa                   :: forall a. a -> K                   [0m
  [33m  Main.cTowa                  :: forall a. a -> K                   [0m
  [33m  Main.eSaki                  :: Int -> K                           [0m
  [33m  Safe.Coerce.coerce          :: forall a b. Coercible a b => a -> b[0m
  [33m  Unsafe.Coerce.unsafeCoerce  :: forall a b. a -> b                 [0m
  [33m  Main.K                      :: Int -> K                           [0m
  [33m                                                                    [0m
  in the following context:

    a :: [33ma0[0m


in binding group cTowa, bNoa

where [33ma0[0m is a rigid type variable
        bound at (line 0, column 0 - line 0, column 0)

See https://github.com/purescript/documentation/blob/master/errors/HoleInferredType.md for more information,
or to contribute content related to this error.

